# AOC2020

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/day1/: common.rs  mod.rs  part1.rs  part2.rs
src/day10/: common.rs  mod.rs  part1.rs  part2.rs
src/day11/: common.rs  part1.rs
src/day2/: common.rs  mod.rs  part1.rs  part2.rs
src/day3/: common.rs  mod.rs  part1.rs  part2.rs
src/day4/: common.rs  mod.rs  part1.rs  part2.rs
src/day5/: common.rs  mod.rs  part1.rs  part2.rs
src/day6/: common.rs  part1.rs  part2.rs
src/day7/: common.rs  part1.rs
src/day8/: common.rs  part1.rs  part2.rs
src/day9/: common.rs  part1.rs  part2.rs
src/test/: mod.rs
src/test/day1/: part1.rs  part2.rs
src/test/day10/: part1.rs  part2.rs
src/test/day11/: part1.rs
src/test/day2/: part1.rs  part2.rs
src/test/day3/: part1.rs  part2.rs
src/test/day4/: part1.rs  part2.rs
src/test/day5/: part1.rs  part2.rs
src/test/day6/: part1.rs  part2.rs
src/test/day7/: part1.rs
src/test/day8/: part1.rs  part2.rs
src/test/day9/: part1.rs  part2.rs
