[package]
name = "adventOfCode2020"
version = "0.1.0"
authors = ["Benjamin Petit <https://www.linkedin.com/in/beni-petit"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
day4 = ["regex"]

[dependencies]
regex = { version = "1.4.2", optional = true }

[lib]
name = "adventOfCode2020"
path = "src/lib.rs"
required-features = ["day4"]

[[bin]]
name = "day1"

[[bin]]
name = "day2"

[[bin]]
name = "day3"

[[bin]]
name = "day4"
required-features = ["day4"]

[[bin]]
name = "day5"

[[bin]]
name = "day6"
