[package]
name = "adventOfCode2020"
version = "0.1.0"
authors = ["Benjamin Petit <https://www.linkedin.com/in/beni-petit"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
day1 = []
day2 = []
day3 = []
day4 = ["regex"]
day5 = []
day6 = []

[dependencies]
regex = { version = "1.4.2", optional = true }

[lib]
name = "adventOfCode2020"
path = "src/lib.rs"

[[bin]]
name = "day1"
required-features = ["day1"]

[[bin]]
name = "day2"
required-features = ["day2"]

[[bin]]
name = "day3"
required-features = ["day3"]

[[bin]]
name = "day4"
required-features = ["day4"]

[[bin]]
name = "day5"
required-features = ["day5"]

[[bin]]
name = "day6"
required-features = ["day6"]
